<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">好吃狗</string>
    <string name="action_settings">Settings</string>
    <string name="userNameProt">请输入用户名</string>
    <string name="userPassProt">请输入密码</string>
    <string name="nicknameProt">请输入昵称</string>
    <string name="ageProt">请输入年龄</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="rememberPass">记住密码</string>
    <string name="userName">帐号：</string>
    <string name="userPass">密码：</string>
    <string name="not_yet_authorized">尚未授权</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="renren">人人网</string>
    <string name="qzone">QQ空间</string>
    <string name="typeProt">点击选择类型</string>

</resources>